swiftide-macros/tests/tool/tool_missing_arg_fail.stderr
error: Arguments in spec and in function do not match:
        The following parameters are missing from the spec: ["other"]
 --> tests/tool/tool_missing_arg_fail.rs:2:5
  |
2 |     description = "My first tool",
  |     ^^^^^^^^^^^
